--- a/profapp/templates/auth/confirm_email.html
+++ b/profapp/templates/auth/confirm_email.html
@@ -17,7 +17,7 @@
     <h3 pr-test="Confirmed">{{ _('You have confirmed your account successfully!') }}</h3>
     <p>
 
-        <a pr-test="ConfirmEmail" href="{{ url_for('general.index') }}">{{ _('Start from here!') }}</a>
+        <a pr-test="ConfirmEmail" href="{{ url_for('index.index') }}">{{ _('Start from here!') }}</a>
     </p>
 
 </div>
