--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -76,9 +76,12 @@
                 });
             };
 
-            $scope.loadNextPage('{{ url_for('company.companies_load')|safe }}');
+            $scope.loadNextPage('{{ url_for('company.companies_load')|safe }}', function (resp) {
+                $scope.data.companies = $scope.data.companies ? $scope.data.companies : [];
+                $scope.data.companies = $scope.data.companies.concat(resp['companies']);
+            });
 
-            if ($(document).width()< 764){
+            if ($(document).width() < 764) {
                 $scope.table = false;
             }
 
@@ -89,7 +92,8 @@
     <div class="container" ng-init="loadData()" ng-controller="companies_list" ng-cloak>
         <div class="row join-company">
             <div class="col-lg-3 create-company pull-right">
-                <button pr-test="CreateNewCompany" class="btn btn-default" type="button" ng-click='createCompany()' ng-disabled="data.actions.create_company !== true" title="{{ data.actions.create_company }}">
+                <button pr-test="CreateNewCompany" class="btn btn-default" type="button" ng-click='createCompany()'
+                        ng-disabled="data.actions.create_company !== true" title="{{ data.actions.create_company }}">
                     <div>{{
                         _('Create new company') }}
                     </div>
@@ -148,9 +152,10 @@
                 </div>
             </div>
         </div>
-        <div ng-if="data_search.company_list.length>0 && !data_search.end && selectedCompany_name" class="show-more"><h4><a class="link"
-                                                                                                    ng-click="show_more()">{{
-            _('Show more search results') }}</a></h4></div>
+        <div ng-if="data_search.company_list.length>0 && !data_search.end && selectedCompany_name" class="show-more">
+            <h4><a class="link"
+                   ng-click="show_more()">{{
+                _('Show more search results') }}</a></h4></div>
         <div class="row company-list">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
@@ -162,8 +167,10 @@
                     </h3>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <a href="#" ng-click="table = false" ng-style="!table?{color:'red'}:''"><i class="fa fa-list pull-right" aria-hidden="true"></i></a>
-                    <a href="#" ng-click="table = true" ng-style="table?{color:'red'}:''"><i class="fa fa-th-large pull-right" aria-hidden="true"></i></a>
+                    <a href="#" ng-click="table = false" ng-style="!table?{color:'red'}:''"><i
+                            class="fa fa-list pull-right" aria-hidden="true"></i></a>
+                    <a href="#" ng-click="table = true" ng-style="table?{color:'red'}:''"><i
+                            class="fa fa-th-large pull-right" aria-hidden="true"></i></a>
                 </div>
             </div>
 
@@ -179,16 +186,15 @@
                             my_employer) }}</p>
                     </div>
                 </a>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                        <p class="portal" ng-if="!my_employer.own_portal.host">{{_('Portals')}}: {{_('No')}}</p>
-                        <button class="portal btn" ng-if="my_employer.own_portal.host" type="button"
-                                ng-click="goToPortal(my_employer.own_portal.host)">
-                            {{_("Go to portal") }}
-                        </button>
-                    </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                    <p class="portal" ng-if="!my_employer.own_portal.host">{{_('Portals')}}: {{_('No')}}</p>
+                    <button class="portal btn" ng-if="my_employer.own_portal.host" type="button"
+                            ng-click="goToPortal(my_employer.own_portal.host)">
+                        {{_("Go to portal") }}
+                    </button>
+                </div>
 
             </div>
-
 
 
             <div ng-if="data.companies && table == true" class="col-lg-4 col-md-4 col-sm-6 col-xs-12"
