--- a/profapp/templates/front/simple/article_social.html
+++ b/profapp/templates/front/simple/article_social.html
@@ -18,7 +18,7 @@
         <comments_count>0</comments_count>
     </i></div>
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
-         {% if g.user.id %}onclick="switch_something(this, '{{ url_for('front.add_delete_liked', article_portal_division_id =
+         {% if g.user.id %}onclick="switch_something(this, '{{ url_for('front.add_delete_liked', publication_id =
          article['id']) }}', '.fa-thumbs-o-up', '.fa-thumbs-up', {'liked_count': '.liked_count'});"{% else %}title="
          {{ _('You need log in to att to bookmark article') }}"{%
                  endif
@@ -35,7 +35,7 @@
 
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          {% if g.user.id %}onclick="switch_something(this, '{{ url_for('front.add_delete_favorite',
-         article_portal_division_id =
+         publication_id =
          article['id']) }}',
                  '.fa-bookmark-o', '.fa-bookmark');"{% else %}title="{{ _('You need log in to att to like article')
                   }}"{% endif %}>
