--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <a target="_blank" type="link" href="//{{ article.portal.host}}/details/{{ article.id }}">
-                        <img class="list-reader-image" style="background-size: cover;" pr-image="article.image_file_id"
+                        <img class="list-reader-image" style="background-size: cover;" pr-image-url="{{ article.illustration.url }}"
                              alt="img">
                     </a>
                     <h3 class="item-title">
