--- a/profapp/templates/front/_common/block_menu.html
+++ b/profapp/templates/front/_common/block_menu.html
@@ -6,7 +6,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <div class="left-block--portal">
                 <div class="centred">
-                    <a class="logo" href="/"><img {{ prImage(portal.logo_file_id) }} alt="Portal logo"
+                    <a class="logo" href="/"><img {{ prImageUrl(portal.logo.url) }} alt="Portal logo"
                                                                                      class="block-item-img"></a>
                 </div>
             </div>
