--- a/profapp/templates/front/simple/company_menu.html
+++ b/profapp/templates/front/simple/company_menu.html
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse navbar-inverse subportal" id="bs-example-navbar-collapse-1">
 
     <div class="subportal-cover">
-        <img src="{{ fileUrl(member_company['logo_file_id']) }}"/>
+        <img src="{{ fileUrl(member_company['logo']['url']) }}"/>
     </div>
 
 
