--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -113,8 +113,7 @@
                         <img ng-show="!editing" class="company-profile-logo-img" pr-image-url-watch="data.logo.url" alt="image">
 
                         <div ng-if="editing">
-                        <div style="width: 400px; height: 300px; position: relative"
-                                                       pr-crop="data.logo"></div>
+                        <div style="width: 400px; height: 300px; position: relative" pr-crop="data.logo"></div>
                         </div>
                     </div>
 
