--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -11,6 +11,9 @@
                     $scope.favorite ? addToMenu_Selected('favorite') : addToMenu_Selected('list');
             $scope.add_delete_favorite = '{{ url_for('index.add_delete_favorite') }}'
             $scope.add_delete_like = '{{ url_for('index.add_delete_like') }}'
+            $scope.tag_url = '{{ url_for('front.division') }}'
+
+{#            @front_bp.route('tags/<string:tags>/', methods=['GET'])#}
             $scope.add_to_favorite = function (article) {
                 article.is_favorite = article['is_favorite'] ? False : True
                 $ok($scope.add_delete_favorite, {'article': article}, function (resp) {
@@ -37,6 +40,8 @@
             $scope.getPopoverContent = function (content_list, width) {
                 return getPopoverContent(content_list, width)
             }
+
+
         });
 
     </script>
@@ -49,21 +54,20 @@
                     <div class="item-type article">
                         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                             <a href="//{{ article.portal.host }}">
-                                <img class="logo-portal-news" ng-src="{{ article.portal.logo }}">
+                                <img class="logo-portal-news" style="height: 65px"
+                                     pr-image-url="{{ article.portal.logo.url }}"/>
                             </a>
                         </div>
                         <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                            <span class="fr label label-default item-tags" ng-repeat="tag in article.tags">
+                                <a href="{{ tag_url({tags: tag.text}) }}">{{ tag.text }}</a>
+                            </span>
 
-                        <span ng-if="article.tags" class="float right tag-in-article">
-                                <a class="label label-danger" target="_blank" href="#" ng-repeat="tag in article.tags">{{
-                                    tag.text+' ' }}</a></span>
-
-                            <a pr-test="ArticlePortal" target="_blank"
+                            <a target="_blank"
                                href="//{{ article.portal.host}}/_c/{{ article.company.id}}/{{ article.company.name}}"
                                class="item-company">{{ article.company.name}}</a>-><a pr-test="ArticleDivision"
                                                                                       target="_blank"
-                                                                                      href="//{{ article.portal.host }}/{{ article.division.name}}/">{{
-                            article.division.name}}</a>
+                                                                                      href="//{{ article.portal.host }}/{{ article.division.name}}/">{{article.division.name}}</a>
                             <div style=""
                                  class="item-publication-date">{{ get_local_time(article.publishing_tm) }}
                             </div>
@@ -72,7 +76,8 @@
                         </div>
                     </div>
                     <a target="_blank" type="link" href="//{{ article.portal.host}}/details/{{ article.id }}">
-                        <img class="list-reader-image" style="background-size: cover;" pr-image-url="{{ article.illustration.url }}"
+                        <img class="list-reader-image" style="background-size: cover;"
+                             pr-image-url="{{ article.illustration.url }}"
                              alt="img">
                     </a>
                     <h3 class="item-title">
@@ -112,11 +117,11 @@
                              class="block-item-img bg-contain"/>
                     </div>
                 </div>
-                <h3 ng-if="loading" style="text-align: center">{{ __('loading articles') }}</h3>
-                <h3 ng-if="data.end && !loading" style="text-align: center">{{ __('No more articles to load') }}</h3>
-                <h3 ng-if="!data.articles && !loading" style="text-align: center">{{ __('Your portals does"t have
-                    articles')
-                    }}</h3>
+            </div>
+            <div class="col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-7">
+                <h3 ng-if="loading" class="tac">{{ __('loading articles') }}</h3>
+                <h3 ng-if="data.end && !loading" class="tac">{{ __('No more articles to load') }}</h3>
+                <h3 ng-if="!data.articles && !loading" class="tac">{{ __('Your portals does"t have articles') }}</h3>
             </div>
         </div>
         {% endraw %}
