main domain defined in Config

--- a/profapp/static/css/oles.css
+++ b/profapp/static/css/oles.css
@@ -333,7 +333,7 @@
 .loading {
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url("//static.profireader.com/static/images/loading.gif");
+    background-image: url("../images/loading.gif");
     background-color: transparent;
 }
 
