--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -113,8 +113,7 @@
                         <div class="item-additional-info">
                         </div>
                         <div class="bottom-hide"></div>
-                        <img pr-image="article.image_file_id" src="//static.profireader.com/static/images/0.gif"
-                             class="block-item-img bg-contain"/>
+                        <img pr-image="article.image_file_id" class="block-item-img bg-contain"/>
                     </div>
                 </div>
             </div>
