--- a/profapp/templates/tools/sso.html
+++ b/profapp/templates/tools/sso.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="//static.profireader.com/static/jquery/jquery.min.js"></script>
+<script src="{{ static_address('jquery/jquery.min.js') }}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 {% if profi_cookie != local_cookie %}
     {%  if profi_cookie %}
