--- a/profapp/templates/tutorial.html
+++ b/profapp/templates/tutorial.html
@@ -7,6 +7,6 @@
 
 {% block content %}
     <script>
-    $('body').prepend('<iframe style="position: absolute; width: 100%; height: 100%;" src="/static/registration_via_email/Registration_via_email.htm"></iframe>');
+    $('body').prepend('<iframe style="position: absolute; width: 100%; height: 100%;" src="{{ static_address('registration_via_email/Registration_via_email.htm') }}"></iframe>');
     </script>
 {% endblock %}
