--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -1082,7 +1082,7 @@ body {
     color: #FF67A0;
   }
   img {
-    background-image: url('//static.profireader.com/static/images/flash-message-danger.png');
+    background-image: url('../images/flash-message-danger.png');
   }
 }
 
@@ -1091,7 +1091,7 @@ body {
     color: #A6F284;
   }
   img {
-    background-image: url('//static.profireader.com/static/images/flash-message-success.png');
+    background-image: url('../images/flash-message-success.png');
   }
 }
 
@@ -1100,7 +1100,7 @@ body {
     color: #f7ff06;
   }
   img {
-    background-image: url('//static.profireader.com/static/images/flash-message-warning.png');
+    background-image: url('../images/flash-message-warning.png');
   }
 }
 
@@ -1109,7 +1109,7 @@ body {
     color: #00d8ff;
   }
   img {
-    background-image: url('//static.profireader.com/static/images/flash-message-info.png');
+    background-image: url('../images/flash-message-info.png');
   }
 }
 
@@ -1248,7 +1248,7 @@ body {
 }
 
 .mess-bg {
-  background-image: url("/static/images/develop-img.jpeg");
+  background-image: url("../images/develop-img.jpeg");
   min-height: 100%;
   min-width: 1024px;
   width: 100%;
