--- a/profapp/templates/_ruslan/partials/_header_files_articles.html
+++ b/profapp/templates/_ruslan/partials/_header_files_articles.html
@@ -1,7 +1,7 @@
 <!---article---->
-<script src="//static.profireader.com/static/tinymce.pr/tinymce.jquery.pr.js"></script>
-<script src="//static.profireader.com/static/new/angular-ui-tinymce/tinymce.js"></script>
-<script src="//static.profireader.com/static/new/angular-ui-slider/slider.js"></script>
+<script src="{{ static_address('tinymce.pr/tinymce.jquery.pr.js') }}"></script>
+<script src="{{ static_address('new/angular-ui-tinymce/tinymce.js') }}"></script>
+<script src="{{ static_address('new/angular-ui-slider/slider.js') }}"></script>
 <script>
     pr_angular_modules.push('ui.tinymce');
 </script>
