--- a/profapp/templates/_ruslan/partials/_header_files_grid.html
+++ b/profapp/templates/_ruslan/partials/_header_files_grid.html
@@ -1,9 +1,9 @@
 <!---?GRID?---->
-    <link rel="styleSheet" href="//static.profireader.com/static/css/ui-grid.css"/>
-    <script src="//static.profireader.com/static/ui-grid/ui-grid.min.js"></script>
-{#    <script src="//static.profireader.com/static/ui-grid/csv.js"></script>#}
-{#    <script src="//static.profireader.com/static/ui-grid/pdfmake.js"></script>#}
-    <script src="//static.profireader.com/static/ui-grid/vfs_fonts.js"></script>
+    <link rel="styleSheet" href="{{ static_address('css/ui-grid.css') }}"/>
+    <script src="{{ static_address('ui-grid/ui-grid.min.js') }}"></script>
+{#    <script src="{{ static_address('ui-grid/csv.js') }}"></script>#}
+{#    <script src="{{ static_address('ui-grid/pdfmake.js') }}"></script>#}
+    <script src="{{ static_address('ui-grid/vfs_fonts.js') }}"></script>
     <script>
            pr_angular_modules.push('ui.grid' , 'ui.grid.pagination' , 'ui.grid.edit', 'ui.grid.selection', 'ui.grid.grouping', 'ui.grid.treeView' );
      </script>
