--- a/profapp/templates/company/company_employee_details.html
+++ b/profapp/templates/company/company_employee_details.html
@@ -35,7 +35,7 @@
     <div ng-controller="company_employee_details" ng-cloak>
 
         <h2>
-            <img class="person-small-cover" pr-image pr-no-image="{{ employee.profireader_small_avatar_url }}"/>
+            <img class="person-small-cover" pr-image-url="{{ employee.avatar.url }}"/>
             <img class="logo-small-cover" pr-image-url="{{ employer.logo.url }}"/>
             {{ _('Employee `%(employee.profireader_name)s` at company `%(employer.name)s`') }}</h2>
 
