--- a/profapp/templates/company/company_employee_update.html
+++ b/profapp/templates/company/company_employee_update.html
@@ -28,15 +28,14 @@
     <div ng-controller="company_employee_update" ng-cloak>
         <div af af-after-save="after_save" af-watch="data.employment" ng-model="data" >
             <h2>
-                <img class="person-small-cover" pr-image
-                     pr-no-image="{{ data.employee.profireader_small_avatar_url }}"/>
+                <img class="person-small-cover" pr-image-url="{{ data.employee.avatar.url }}"/>
                 <img class="logo-small-cover" pr-image-url="{{ data.employer.logo.url }}"/>
                 {{ _('Employee `%(data.employee.profireader_name)s` at company `%(data.employer.name)s`') }}</h2>
 
             <img pr-image-url="{{ employer.logo.url }}"/>
             {{ _('permissions') }}<br>
             <div ng-class="{disabled: !permitted}" ng-repeat="(right_name, permitted) in data.employment.rights">
-                <img src="//static.profireader.com/static/images/0.gif"
+                <img ng-src="{{ static_address('images/0.gif') }}"
                      class="pr-grid-cell-field-type-icons-icon pr-grid-cell-field-type-icons-icon-{{ right_name }}"/>
                 <label>
                     <i class="pr-grid-cell-field-type-icons-icon pr-grid-cell-field-type-icons-icon-{{ right_name }}"></i>
