--- a/profapp/templates/front/_common/block_user.html
+++ b/profapp/templates/front/_common/block_user.html
@@ -1,21 +1,12 @@
 {% if g.user %}
     <a pr_test="UserProfile" role="button"
        aria-haspopup="true"
-       href="//profireader.com{{ url_for('user.profile', user_id = g.user.id) }}"
+       href="//{{ MAIN_DOMAIN }}{{ url_for('user.profile', user_id = g.user.id) }}"
        aria-expanded="false">
-        <img style="width: 35px" pr-image=""
-             src="{{ g.user.profireader_avatar_url }}"
+        <img style="width: 35px" pr-image-url="{{ g.user.avatar.url }}"
              class="person-small-cover">{{ g.user.profireader_name }}
     </a>
 {% else %}
-    <a pr_test="UserProfile" role="button" style="display: none;"
-       aria-haspopup="true"
-       href="//profireader.com{{ url_for('user.profile', user_id = g.user.id) }}"
-       aria-expanded="false">
-        <img style="width: 35px" pr-image=""
-             src="{{ g.user.profireader_avatar_url }}"
-             class="person-small-cover">{{ g.user.profireader_name }}
-    </a>
 {% endif %}
-<a target="profireader_subscribe" href="//profireader.com/reader/list_reader_from_front/{{ g.portal.id }}"><img
-        style="width: 35px" src="//static.profireader.com/static/favicon.ico"/></a>
+<a target="profireader_subscribe" href="//{{ MAIN_DOMAIN }}/reader/list_reader_from_front/{{ g.portal.id }}"><img
+        style="width: 35px" src="{{ static_address('favicon.ico') }}"/></a>
