--- a/profapp/templates/front/clover/article_unavailable.html
+++ b/profapp/templates/front/clover/article_unavailable.html
@@ -11,7 +11,7 @@
 
         <div class="item-additional-info-top"
              style="display: block; width: 100%; padding-bottom: 5px; border-bottom: 1px #ccc solid; margin-bottom: 15px;">
-            <div class="item-company"><a href="//profireader.com/company/profile/{{ article['company']['id'] }}">
+            <div class="item-company"><a href="//{{ MAIN_DOMAIN }}/company/profile/{{ article['company']['id'] }}">
                 {{ article['company']['name']|safe }}</a>
             </div>
 
