--- a/profapp/templates/partials/Profireader_content.html
+++ b/profapp/templates/partials/Profireader_content.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="row">
             <!--<div class="col-lg-12">
-                <h4>Profireader.com
+                <h4>{{ MAIN_DOMAIN }}
                     {{ __('index bottom text to readers') }}
                 </h4>
             </div>-->
