--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -865,6 +865,18 @@ body {
   border-color: @color-red-btn;
 }
 
+.pr-validation-error:focus {
+  border-color: @color-red-btn;
+}
+
+.pr-validation-warning:focus {
+  border-color: #ffff00;
+}
+
+.pr-validation-notice:focus {
+  border-color: @color-red-btn;
+}
+
 .error-input {
   color: @color-red-hover;
 }
