--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -57,7 +57,7 @@
         $scope.url_tutorial = {{ raw_url_for('tutorial.tutorial')|safe }}
         $scope.url_auth_logout = {{ raw_url_for('auth.logout')|safe }}
         $scope.url_user_profile = {{ raw_url_for('user.profile')|safe }}
-        $scope.user_avatar_url = '{{ current_user.avatar.url }}';
+        $scope.user_avatar_url = '{{ current_user.get_avatar()['url'] }}';
         $scope.url_messenger = '{{ url_for('messenger.messenger'|safe) }}';
         $scope.login_url = '{{ url_for('auth.login_signup_endpoint')|safe }}';
 
